# IdApp

./: .gitignore  README.md  pyproject.toml  sql_app.db
.github/workflows/: blank.yml
myidapp/: config.py  main.py  utils.py
myidapp/database/: crud.py  database.py  models.py  schemas.py
myidapp/upwork_parser/: upwork_category_parser.py  upwork_jobs_parser.py
myidapp/upwork_parser/notebooks/: upwork_jobs_parser.ipynb  upwork_scraper_requests_test.ipynb
