[tool.poetry]
name = "myidapp"
version = "0.1.0"
description = ""
authors = ["Ivan Korneichuk <korneichuk.iv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
mysql-connector-python = "^8.1.0"
sqlalchemy = "^2.0.20"
black = "^23.7.0"
ruff = "^0.0.284"
pyright = "^1.1.323"
alembic = "^1.11.3"
python-multipart = "^0.0.6"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
colorlog = "^6.7.0"
browsermob-proxy = "^0.8.0"
selenium-wire = "^5.1.0"
undetected-chromedriver = "^3.5.2"
coloredlogs = "^15.0.1"
haralyzer = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
